Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Using an image for the RSS feed link + improved explanation text.
Bug fixes:
~~~~~~~~~~
- Added back the translation for "welcome_body", it was lost because
  "welcome_body" had not been added into custom.pot.
- It is now possible to switch language from the register form without
  CPS displaying an error.
- Better wording for the login, register and join forms, button labels should be
  verbs like "Login", "Search", etc.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-