@@ -14,4 +14,5 @@ Bug fixes:
   verbs like "Login", "Search", etc.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
--
+- Added more possibilities to getDateStr.py to display dates according to the
+  ISO 8601 format and W3C recommendations.
